WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219036
[iOS] Stop leaking an XPC transaction in our XPC services
https://bugs.webkit.org/show_bug.cgi?id=219036
Summary
[iOS] Stop leaking an XPC transaction in our XPC services
Chris Dumez
Reported
2020-11-17 08:42:40 PST
Stop leaking an XPC transaction in our XPC services on iOS. We were doing this to control the lifetime of our child services ourselves. However, this is not needed on iOS because the UIProcess takes RunningBoard process assertions on behalf of its child processes.
Attachments
Patch
(3.49 KB, patch)
2020-11-17 08:45 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-11-17 08:45:37 PST
Created
attachment 414345
[details]
Patch
Geoffrey Garen
Comment 2
2020-11-17 09:01:29 PST
Comment on
attachment 414345
[details]
Patch r=me
EWS
Comment 3
2020-11-17 09:28:32 PST
Committed
r269908
: <
https://trac.webkit.org/changeset/269908
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 414345
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-11-17 09:29:18 PST
<
rdar://problem/71489686
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug